removed light-dark mode, listAsDiff needs refinement, UI needs updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" href="style.css"> 
   <title>Ajax Amsterdam</title>
@@ -18,14 +19,10 @@
       </div>
 
       <button class="start-btn" onclick=startGame()>start</button>
-    
-      <button class="light-mode-button" aria-label="Toggle Light Mode" onclick=toggle_light_mode()>
-	    	<span></span>
-	    	<span></span>
-	    </button>      
+        
     </header>
 
-    <div class="container">
+    <div class="card-container">
       <div class="led" id="led">
         <div class="card">
           <input class="text" id="capital" placeholder="Capital"></input>
