--- a/index.html
+++ b/index.html
@@ -9,21 +9,35 @@
   <link rel="stylesheet" href="/css/main.css"> 
   <title>Ajax Amsterdam</title>
 </head>
-<body class="bg-black h-screen w-screen">
-  <header class="h-20 w-screen max-w-[1024px] flex flex-row justify-between text-4xl py-2 mx-auto">
-    <div class="flex flex-row w-fit">
-      <div onclick=selectDiff(this) id="easy"  class="bg-ios-green text-black px-4 py-2 border-2 border-solid   border-background rounded-tl-2xl rounded-bl-2xl cursor-pointer">EASY</div>
-      <div onclick=selectDiff(this) id="medium" class="bg-ios-yellow text-black px-4 py-2 border-t-2 border-b-2 border-solid border-background cursor-pointer">MEDIUM</div>
-      <div onclick=selectDiff(this) id="hard"  class="bg-ios-red text-black px-4 py-2 border-2 border-solid   border-background rounded-tr-2xl rounded-br-2xl cursor-pointer" >HARD</div>
+<body id="background" class="h-screen" style="background-color: white;">
+  <header class="h-40 w-5/6 max-w-[1024px] flex flex-row justify-around items-center text-xl py-2 mx-auto">
+    <div class="flex flex-row w-1/2 h-14 text-2xl" id="modes">
+      <button onclick=selectDiff(this) id="easy" class="w-1/3 bg-green-500 hover:text-slate-900  text-slate-900  px-4 py-2  border-solid 
+        border-background rounded-tl-2xl rounded-bl-2xl cursor-pointer flex items-center justify-center font-semibold" style="transition: .3s;">
+        EASY
+      </button>
+
+      <button onclick=selectDiff(this) id="medium" class="w-1/3 bg-gray-300  hover:text-slate-900 text-gray-500 px-4 py-2
+        border-solid border-background cursor-pointer flex items-center justify-center font-semibold" style="transition: .3s;">
+        MEDIUM
+      </button>
+
+      <button onclick=selectDiff(this) id="hard"  class="w-1/3 bg-gray-300  hover:text-slate-900 text-gray-500  px-4 py-2  border-solid
+        border-background rounded-tr-2xl rounded-br-2xl cursor-pointer flex items-center justify-center font-semibold" style="transition: .3s;">
+        HARD
+      </button>
     </div>
-    <div class="border-solid border-2 rounded-[2rem] px-8 py-2" onclick=start()>START</div>
-    <div class="border-solid border-2 rounded-[2rem] px-8 py-2" onclick=reset()>RESET</div>
+
+    <div class="flex flex-row justify-around w-2/5 text-2xl text-white">
+      <button id="start" class="font-semibold cursor-pointer px-7 py-3 bg-blue-600 rounded-full easy-out transition-all delay-75 duration-400 hover:-translate-y-2 hover:scale-110  active:bg-blue-900 active:text-white"  style="transition: .3s;">Start</button>
+      <button id="reset" class="font-semibold cursor-pointer px-7 py-3 bg-blue-600 rounded-full easy-out transition-all delay-150 hover:-translate-y-2  hover:scale-110 active:bg-blue-900 active:text-white"  style="transition: .3s;">Reset</button>
+    </div>
   </header>
 
-  <div class="w-full h-full flex justify-center items-center">  
-      <div class="bg-separator w-4/5 h-40 p-4 flex flex-row gap-2 justify-center items-center  rounded-3xl ">
-        <input class="w-2/5 h-1/2 rounded-xl text-2xl text-center bg-transparent" id="capital" placeholder="Capital"></input>
-        <div class="w-2/5 h-1/2 rounded-xl text-2xl text-center py-4" id="country" placeholder="Country">Country</div>
+  <div class="w-full h-4/5 flex justify-center items-center ">  
+      <div class="bg-slate-400 w-5/6 lg:max-w-[1024px] h-40 py-4 px-6 grid grid-cols-2 gap-x-10 items-center rounded-xl text-4xl font-bold">
+        <input id="capital" class="accent-blue-600 text-black font-semibold min-w-full  h-1/2 rounded-xl text-center bg-transparent placeholder:text-black/60" placeholder="Capital"></input>
+        <div   id="country" class="min-w-full h-full rounded-xl text-center flex justify-center items-center" placeholder="Country">Country</div>
       </div>
   </div>
 </body>
